fixed the form overlay when on top, repositioned the endorsers slider on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -577,11 +577,14 @@ body {
   height: 50px;
   z-index: 9999;
   transition: 250ms ease all;
+  transform: rotate(-90deg);
+  transform-origin: 50% 50%;
 }
 .circle svg {
   width: 100%;
   height: 100%;
   stroke: #da2128 !important;
+  transition: 250ms ease all;
 }
 
 .lesson-card {
@@ -615,6 +618,13 @@ body {
 .endorsers {
   display: inline-block;
   width: 300px;
+}
+@media (max-width: 480px) {
+  .endorsers {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
 }
 .endorsers__title {
   vertical-align: top;
@@ -970,12 +980,14 @@ body {
   right: 20px;
   transition: 250ms ease all;
   overflow-y: scroll;
-  height: 90vh;
   overflow: -moz-scrollbars-none;
   -ms-overflow-style: none;
 }
 .form-top::-webkit-scrollbar {
   width: 0 !important;
+}
+.form-top.open {
+  height: 90vh;
 }
 @media (max-width: 480px) {
   .form-top.open .form-info {
